--- a/infrastructure/src/main/resources/application.properties
+++ b/infrastructure/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=infrastructure
 spring.docker.compose.file=./infrastructure/compose.yaml
 spring.docker.compose.lifecycle-management=start_only
 logging.level.org.springframework.jdbc.core=TRACE
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
