--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>application</module>
+        <module>infrastructure</module>
     </modules>
 
     <properties>
